--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,9 +4,17 @@ WORKDIR /app
 
 COPY ./package.json ./
 
+#RUN npm -g config set user root
 RUN npm install
+
+#RUN chmod -R 777 /app/node_modules
 
 COPY ./ ./
 
+#RUN chmod -R 777 /app/node_modules
+
+
+#CMD ["sh"]
+
+CMD ["sh","-c","chmod -R 777 /app/node_modules/ && npm run start"]
 #CMD ["npm","run","start"]
-CMD ["sh"]
