--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -1,11 +1,15 @@
 version: "3"
 services:
   frontend:
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    stdin_open: true
     build:
       context: .
       dockerfile: Dockerfile.dev
     ports: 
       - "3000:3000"
+    #user: ${CURRENT_UID}
     volumes: 
       - /app/node_modules
-      - .:/app
+      - /c/Users/samir/SamirWork/DockerUdemy/frontend:/app
