--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,4 @@ deploy:
   on:
     branch: master
 access_key_id: $AWS_ACCESS_KEY
-secret_access_key:
-  secure: "$AWS_ACCESS_VALUE"
+secret_access_key: $AWS_SECRET_KEY
